# twizzlerbot-contoller

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  device_mac.txt  eim_config.toml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/lvgl_port/: CMakeLists.txt  Kconfig.projbuild  lv_conf.h
components/lvgl_port/include/: lvgl_v9_port.h  waveshare_rgb_lcd_port.h
components/lvgl_port/src/: lvgl_v9_port.cpp  waveshare_rgb_lcd_port.c
components/nanopb/: CMakeLists.txt
components/nanopb/include/protodefs/: DeliveryTable.pb.h  MotorData.pb.h  NumberOfPages.pb.h  PeriodicStatusUpdate.pb.h  Request.pb.h  Reservation.pb.h  ReservationStatus.pb.h  ReservationsTable.pb.h
components/nanopb/protodefs/: DeliveryTable.proto  MotorData.proto  NumberOfPages.proto  PeriodicStatusUpdate.proto  PostResponse.proto  Request.proto  Reservation.proto  ReservationStatus.proto  ReservationsTable.proto
components/nanopb/src/nanopb/: pb_common.c  pb_decode.c  pb_encode.c
components/nanopb/src/protodefs/: DeliveryTable.pb.c  MotorData.pb.c  NumberOfPages.pb.c  PeriodicStatusUpdate.pb.c  Request.pb.c  Reservation.pb.c  ReservationStatus.pb.c  ReservationsTable.pb.c
components/ui/: CMakeLists.txt
components/ui/img_files/: alien_transparent_background.c
components/ui/include/: page_manager.h  page_sensor.h  page_vehicle.h
components/ui/include/enums/: buttons_container_size_enum.h  text_color_enum.h
components/ui/include/input/: button.h  joystick.h
components/ui/include/styles/: colors.h  images.h  styles.h  text.h
components/ui/src/: page_manager.c  page_sensor.c  page_vehicle.c
components/ui/src/fonts/: siemens_sans_bold_big.c  siemens_sans_global_bold.c  siemens_sans_global_roman.c  siemens_sans_next_reservation_text.c  siemens_sans_registration_text.c
components/ui/src/input/: button.c  joystick.c
components/ui/src/styles/: colors.c  images.c  styles.c  text.c
main/: CMakeLists.txt  idf_component.yml  main.c
(+1059 files in other folders)
